--- a/apps/site/src/styles/prism.css
+++ b/apps/site/src/styles/prism.css
@@ -14,7 +14,7 @@ pre[class*="language-"] {
   font-family: "JetBrains Mono", Monaco, monospace;
   font-size: 1em;
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
