--- a/libs/wordpress-plugin/plugin/trunk/settings/react-promo.module.scss
+++ b/libs/wordpress-plugin/plugin/trunk/settings/react-promo.module.scss
@@ -26,6 +26,16 @@
   line-height: 1.4;
   color: black;
   margin-bottom: 12px;
+  padding-left: 28px;
+  position: relative;
+
+  svg {
+    color: #91a5ba;
+    font-size: 16px;
+    position: absolute;
+    top: 2px;
+    left: 0;
+  }
 
   strong {
     font-weight: 700;
