--- a/libs/wordpress-plugin/plugin/trunk/settings/react-promo.module.scss
+++ b/libs/wordpress-plugin/plugin/trunk/settings/react-promo.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 18px;
+  margin-top: 34px;
 }
 
 .PromoHeading {
@@ -41,3 +42,5 @@
     font-weight: 700;
   }
 }
+
+.PromoInfoText { color: #758AA1; }
