--- a/libs/wordpress-plugin/plugin/trunk/settings/react-promo.module.scss
+++ b/libs/wordpress-plugin/plugin/trunk/settings/react-promo.module.scss
@@ -1,13 +1,3 @@
-.PromoCard {
-  --promo-y-padding: 30px;
-  --promo-x-padding: 40px;
-  background: white;
-  border: 1px solid rgb(221, 231, 240);
-  border-radius: 8px;
-  max-width: 826px;
-  overflow: hidden;
-}
-
 .PromoStack {
   display: flex;
   flex-direction: column;
@@ -25,12 +15,78 @@
   margin: 0;
 }
 
+.PromoCard {
+  --promo-y-padding: 30px;
+  --promo-x-padding: 40px;
+  background: white;
+  border: 1px solid rgb(221, 231, 240);
+  border-radius: 8px;
+  max-width: 826px;
+  overflow: hidden;
+}
+
+.PromoCardHeader {
+  padding: var(--promo-y-padding) var(--promo-x-padding) 0;
+
+  .PromoCardItems & {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.PromoCardSmallTitle {
+  font-family: colfax-web, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #0E1114;
+  margin-bottom: 4px;
+  margin-top: 0;
+}
+
+.PromoCardBigTitle {
+  font-family: colfax-web, sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.PromoCardItems {
+  display: flex;
+  align-items: stretch;
+  gap: 51px;
+  padding: 0 var(--promo-x-padding);
+}
+
+.PromoCardItemsSmallGap {
+  gap: 36px;
+}
+
+.PromoCardItemsNoPaddingRight {
+  padding-right: 0;
+}
+
+.PromoCardItemsNoPaddingLeft {
+  padding-left: 0;
+}
+
+.PromoCardContent {
+  padding-bottom: var(--promo-y-padding);
+}
+
 .PromoList {
   margin: 0;
 }
 
 .PromoListItem {
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -48,7 +104,7 @@
     color: #91a5ba;
     font-size: 16px;
     position: absolute;
-    top: 2px;
+    top: 3px;
     left: 0;
   }
 
@@ -57,7 +113,6 @@
   }
 
   a {
-    font-family: Inter;
     text-decoration: none;
     color: #6048E5;
   }
@@ -99,34 +154,6 @@
   }
 }
 
-.PromoCardItems {
-  display: flex;
-  align-items: stretch;
-  gap: 51px;
-  padding: 0 var(--promo-x-padding);
-}
-
-.PromoCardItemsSmallGap {
-  gap: 36px;
-}
-
-.PromoCardItemsNoPaddingRight {
-  padding-right: 0;
-}
-
-.PromoCardItemsNoPaddingLeft {
-  padding-left: 0;
-}
-
-.PromoCardHeader {
-  padding: var(--promo-y-padding) var(--promo-x-padding) 0;
-
-  .PromoCardItems & {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-.PromoCardContent {
-  padding-bottom: var(--promo-y-padding);
+.PromoCardPurpleText {
+  color: #6048E5;
 }
