--- a/libs/wordpress-plugin/plugin/trunk/global.css
+++ b/libs/wordpress-plugin/plugin/trunk/global.css
@@ -58,3 +58,25 @@
 .BPActivateErrorRed {
     color: #DF3449;
 }
+
+.BPActivateButton {
+    cursor: pointer;
+    color: white;
+    border: none;
+    background: #3A6FAC;
+    border-radius: 6px;
+    padding: 10px 12px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 150%;
+}
+
+.BPActivateButtonSvg {
+    fill: currentColor;
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.125em;
+    margin-left: 8px;
+}
