re add font-family

--- a/libs/block-template-react/src/base.module.scss
+++ b/libs/block-template-react/src/base.module.scss
@@ -4,7 +4,7 @@ Styles used for the Hello World example included with block-react-template
 
 .block {
   /* –––––––––– Helper styles –––––––––– */
-
+  font-family: system-ui, "Helvetica Neue", "Arial", sans-serif;
   color: #1e293b;
 
   .heading,
